# librsync

./: .clang-tidy  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile.am  Makefile_simple  NEWS.md  README.md  TODO.md  configure.ac  librsync.spec  patch.c  prototab.c  prototab.h  rdiff.c
.github/workflows/: build_on_push.yml  check.yml  clang-sa.yml  clang-tidy.yml  iwyu.yml  lint.yml
PCbuild/: .gitignore  PCbuild.sln  RDiff.cs  README.md  blake2-impl.h  blake2.h  blake2b-ref.c  config.h  rdiff.c  rdiff.h  visualstudio.h
PCbuild/librsync/: librsync.vcxproj  librsync.vcxproj.filters
PCbuild/rdiff/: rdiff.vcxproj  rdiff.vcxproj.filters
cmake/: BuildType.cmake  FindLIBB2.cmake  FindPOPT.cmake  Findlibb2.cmake
debian/: changelog  docs  rules
doc/: Doxyfile.in  formats.md  install.md  librsync.md  pull.md  rdiff.1  rdiff.md  streaming.md  trace.md  utilities.md  versioning.md  whole.md
examples/stream/: CMakeLists.txt  README.md  client.c  common.h  server.c
popt/: findme.c  popt.c  poptconfig.c  poptparse.c  system.h
src/: base64.c  buf.c  buf.h  checksum.c  checksum.h  command.c  command.h  config.h.cmake  config.h.in  delta.c  deltagen.c  deltagen.h  emit.c  emit.h  fileutil.c  hashtable.c  hashtable.h  hex.c  isprefix.c  isprefix.h  job.c  job.h  lib.rs  librsync.def  librsync.h  librsync_export.h  librsyncbuf.h  main.rs  mdfour.c  mdfour.h  mksum.c  msg.c  netint.c  netint.h  patch.c  prototab.c  prototab.h  rabinkarp.c  rabinkarp.h  rdiff.c  (+22 more)
tests/: changes.test  checksum_test.c  delta.test  hashtable_test.c  help.test  isprefix_test.c  largefile.test  mutate.test  netint_test.c  performance.test  rabinkarp_perf.c  rabinkarp_test.c  rdiff_bad_option.sh  rdiff_bad_option.test  rollsum_test.c  signature.test  sumset_test.c  test_delta_eof.c  test_delta_eof.run  test_delta_read.c  test_delta_read.run  test_small_output.c  test_small_output.run  testcommon.sh  triple.test
tests/signature.input/: 01-Rrabinkarp-Hblake2-S0.sig  01-Rrabinkarp-Hmd4-S-1.sig  01-Rrabinkarp-Hmd4-S0.sig  01-Rrabinkarp-Hmd4-S8.sig  01-Rrollsum-Hblake2-S-1.sig  01-Rrollsum-Hblake2-S0.sig  01-Rrollsum-Hmd4-S-1.sig  01-Rrollsum-Hmd4-S0.sig  01-Rrollsum-Hmd4-S8.sig
tests/signature.input/blake2/: 01.sig
tests/signature.input/md4/: 01.sig
tests/signature.input/rabinkarp-blake2/: 01.sig
testsuite/: Makefile.am
